// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`paintScene — whole-scene golden (ADR-0078 S1) > emits a stable ordered call log for the flag-off scene 1`] = `
[
  "setTransform([1,0,0,1,0,0])",
  "clearRect([0,0,800,760])",
  "strokeStyle=#111",
  "lineWidth=1",
  "beginPath([])",
  "moveTo([0.5,0])",
  "lineTo([0.5,760])",
  "moveTo([12.5,0])",
  "lineTo([12.5,760])",
  "moveTo([24.5,0])",
  "lineTo([24.5,760])",
  "moveTo([36.5,0])",
  "lineTo([36.5,760])",
  "moveTo([48.5,0])",
  "lineTo([48.5,760])",
  "moveTo([60.5,0])",
  "lineTo([60.5,760])",
  "moveTo([72.5,0])",
  "lineTo([72.5,760])",
  "moveTo([84.5,0])",
  "lineTo([84.5,760])",
  "moveTo([96.5,0])",
  "lineTo([96.5,760])",
  "moveTo([108.5,0])",
  "lineTo([108.5,760])",
  "moveTo([120.5,0])",
  "lineTo([120.5,760])",
  "moveTo([132.5,0])",
  "lineTo([132.5,760])",
  "moveTo([144.5,0])",
  "lineTo([144.5,760])",
  "moveTo([156.5,0])",
  "lineTo([156.5,760])",
  "moveTo([168.5,0])",
  "lineTo([168.5,760])",
  "moveTo([180.5,0])",
  "lineTo([180.5,760])",
  "moveTo([192.5,0])",
  "lineTo([192.5,760])",
  "moveTo([204.5,0])",
  "lineTo([204.5,760])",
  "moveTo([216.5,0])",
  "lineTo([216.5,760])",
  "moveTo([228.5,0])",
  "lineTo([228.5,760])",
  "moveTo([240.5,0])",
  "lineTo([240.5,760])",
  "moveTo([252.5,0])",
  "lineTo([252.5,760])",
  "moveTo([264.5,0])",
  "lineTo([264.5,760])",
  "moveTo([276.5,0])",
  "lineTo([276.5,760])",
  "moveTo([288.5,0])",
  "lineTo([288.5,760])",
  "moveTo([300.5,0])",
  "lineTo([300.5,760])",
  "moveTo([312.5,0])",
  "lineTo([312.5,760])",
  "moveTo([324.5,0])",
  "lineTo([324.5,760])",
  "moveTo([336.5,0])",
  "lineTo([336.5,760])",
  "moveTo([348.5,0])",
  "lineTo([348.5,760])",
  "moveTo([360.5,0])",
  "lineTo([360.5,760])",
  "moveTo([372.5,0])",
  "lineTo([372.5,760])",
  "moveTo([384.5,0])",
  "lineTo([384.5,760])",
  "moveTo([396.5,0])",
  "lineTo([396.5,760])",
  "moveTo([408.5,0])",
  "lineTo([408.5,760])",
  "moveTo([420.5,0])",
  "lineTo([420.5,760])",
  "moveTo([432.5,0])",
  "lineTo([432.5,760])",
  "moveTo([444.5,0])",
  "lineTo([444.5,760])",
  "moveTo([456.5,0])",
  "lineTo([456.5,760])",
  "moveTo([468.5,0])",
  "lineTo([468.5,760])",
  "moveTo([480.5,0])",
  "lineTo([480.5,760])",
  "moveTo([492.5,0])",
  "lineTo([492.5,760])",
  "moveTo([504.5,0])",
  "lineTo([504.5,760])",
  "moveTo([516.5,0])",
  "lineTo([516.5,760])",
  "moveTo([528.5,0])",
  "lineTo([528.5,760])",
  "moveTo([540.5,0])",
  "lineTo([540.5,760])",
  "moveTo([552.5,0])",
  "lineTo([552.5,760])",
  "moveTo([564.5,0])",
  "lineTo([564.5,760])",
  "moveTo([576.5,0])",
  "lineTo([576.5,760])",
  "moveTo([588.5,0])",
  "lineTo([588.5,760])",
  "moveTo([600.5,0])",
  "lineTo([600.5,760])",
  "moveTo([612.5,0])",
  "lineTo([612.5,760])",
  "moveTo([624.5,0])",
  "lineTo([624.5,760])",
  "moveTo([636.5,0])",
  "lineTo([636.5,760])",
  "moveTo([648.5,0])",
  "lineTo([648.5,760])",
  "moveTo([660.5,0])",
  "lineTo([660.5,760])",
  "moveTo([672.5,0])",
  "lineTo([672.5,760])",
  "moveTo([684.5,0])",
  "lineTo([684.5,760])",
  "moveTo([696.5,0])",
  "lineTo([696.5,760])",
  "moveTo([708.5,0])",
  "lineTo([708.5,760])",
  "moveTo([720.5,0])",
  "lineTo([720.5,760])",
  "moveTo([732.5,0])",
  "lineTo([732.5,760])",
  "moveTo([744.5,0])",
  "lineTo([744.5,760])",
  "moveTo([756.5,0])",
  "lineTo([756.5,760])",
  "moveTo([768.5,0])",
  "lineTo([768.5,760])",
  "moveTo([780.5,0])",
  "lineTo([780.5,760])",
  "moveTo([792.5,0])",
  "lineTo([792.5,760])",
  "moveTo([804.5,0])",
  "lineTo([804.5,760])",
  "moveTo([60.5,0])",
  "lineTo([60.5,760])",
  "moveTo([432.5,0])",
  "lineTo([432.5,760])",
  "moveTo([768.5,0])",
  "lineTo([768.5,760])",
  "moveTo([60.5,0])",
  "lineTo([60.5,760])",
  "stroke([])",
  "strokeStyle=#9c9c9c",
  "lineWidth=1",
  "beginPath([])",
  "moveTo([0,-19.5])",
  "lineTo([800,-19.5])",
  "moveTo([0,40.5])",
  "lineTo([800,40.5])",
  "moveTo([0,100.5])",
  "lineTo([800,100.5])",
  "moveTo([0,160.5])",
  "lineTo([800,160.5])",
  "moveTo([0,220.5])",
  "lineTo([800,220.5])",
  "moveTo([0,280.5])",
  "lineTo([800,280.5])",
  "moveTo([0,340.5])",
  "lineTo([800,340.5])",
  "moveTo([0,400.5])",
  "lineTo([800,400.5])",
  "moveTo([0,460.5])",
  "lineTo([800,460.5])",
  "moveTo([0,520.5])",
  "lineTo([800,520.5])",
  "moveTo([0,580.5])",
  "lineTo([800,580.5])",
  "moveTo([0,640.5])",
  "lineTo([800,640.5])",
  "moveTo([0,700.5])",
  "lineTo([800,700.5])",
  "moveTo([0,760.5])",
  "lineTo([800,760.5])",
  "stroke([])",
  "strokeStyle=#333",
  "lineWidth=1",
  "setLineDash([[4,3]])",
  "beginPath([])",
  "moveTo([72,130])",
  "lineTo([60,130])",
  "lineTo([60,190])",
  "lineTo([72,190])",
  "moveTo([120,250])",
  "lineTo([132,250])",
  "lineTo([132,550])",
  "lineTo([113,550])",
  "stroke([])",
  "setLineDash([[]])",
  "lineWidth=2",
  "beginPath([])",
  "moveTo([120,70])",
  "lineTo([132,70])",
  "lineTo([132,130])",
  "lineTo([72,130])",
  "moveTo([120,190])",
  "lineTo([132,190])",
  "lineTo([132,250])",
  "lineTo([120,250])",
  "stroke([])",
  "lineWidth=1",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,67,48,6])",
  "globalAlpha=1",
  "globalAlpha=1",
  "fillStyle=#f00",
  "fillRect([72,127,48,6])",
  "globalAlpha=1",
  "strokeStyle=#fff",
  "lineWidth=1.5",
  "setLineDash([[]])",
  "strokeRect([72.75,127.75,46.5,4.5])",
  "setLineDash([[]])",
  "globalAlpha=1",
  "fillStyle=#fa0",
  "fillRect([72,187,48,6])",
  "globalAlpha=1",
  "strokeStyle=#fff",
  "lineWidth=1.5",
  "setLineDash([[3,2]])",
  "strokeRect([72.75,187.75,46.5,4.5])",
  "setLineDash([[]])",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,247,48,6])",
  "globalAlpha=1",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,307,48,6])",
  "globalAlpha=1",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,367,48,6])",
  "globalAlpha=1",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,427,48,6])",
  "globalAlpha=1",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,487,48,6])",
  "globalAlpha=1",
  "globalAlpha=1",
  "fillStyle=#44f",
  "beginPath([])",
  "moveTo([120,543])",
  "lineTo([127,550])",
  "lineTo([120,557])",
  "lineTo([113,550])",
  "fill([])",
  "globalAlpha=1",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,607,48,6])",
  "globalAlpha=1",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,667,48,6])",
  "globalAlpha=1",
  "fillStyle=#333",
  "beginPath([])",
  "moveTo([68.5,302])",
  "lineTo([75.5,302])",
  "lineTo([72,307])",
  "fill([])",
  "fillStyle=#fa0",
  "beginPath([])",
  "moveTo([73,375])",
  "lineTo([79,375])",
  "lineTo([76,368])",
  "fill([])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "beginPath([])",
  "moveTo([73,375])",
  "lineTo([79,375])",
  "lineTo([76,368])",
  "lineTo([73,375])",
  "stroke([])",
  "fillStyle=#fa0",
  "fillRect([95,421,5,5])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "strokeRect([95.5,421.5,4,4])",
  "fillStyle=#fa0",
  "fillRect([93,419,5,5])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "strokeRect([93.5,419.5,4,4])",
  "font=11px 'IBM Plex Sans', ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif",
  "textBaseline=middle",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A100 Excavate",96,58])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A110 Piling",96,118])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A120 Steel",96,178])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A130 Cladding",96,238])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A140 Fit-out",96,298])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A150 M&E",96,358])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A160 Roof",96,418])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A170 Crane",96,478])",
  "textAlign=left",
  "font=600 11px 'IBM Plex Sans', ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["M1 Handover",120,538])",
  "textAlign=left",
  "font=11px 'IBM Plex Sans', ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["LOE Supervision",96,598])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["Substructure",96,658])",
  "textAlign=left",
  "font=11px 'IBM Plex Sans', ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif",
  "textBaseline=middle",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",124,82])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",124,142])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",124,202])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",124,262])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",124,322])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",124,382])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",124,442])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",124,502])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["6 Jan",120,562])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",124,622])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",124,682])",
  "textAlign=left",
  "textAlign=left",
]
`;

exports[`paintScene — whole-scene golden (ADR-0078 S1) > emits a stable ordered call log for the maximal scene 1`] = `
[
  "setTransform([1,0,0,1,0,0])",
  "clearRect([0,0,800,760])",
  "fillStyle=#111111",
  "fillRect([0,0,60,760])",
  "fillRect([432,0,336,760])",
  "fillStyle=#222",
  "fillRect([12,0,12,760])",
  "fillRect([84,0,12,760])",
  "fillRect([96,0,12,760])",
  "fillRect([168,0,12,760])",
  "fillRect([180,0,12,760])",
  "fillRect([252,0,12,760])",
  "fillRect([264,0,12,760])",
  "fillRect([336,0,12,760])",
  "fillRect([348,0,12,760])",
  "fillRect([420,0,12,760])",
  "fillRect([432,0,12,760])",
  "fillRect([504,0,12,760])",
  "fillRect([516,0,12,760])",
  "fillRect([588,0,12,760])",
  "fillRect([600,0,12,760])",
  "fillRect([672,0,12,760])",
  "fillRect([684,0,12,760])",
  "fillRect([756,0,12,760])",
  "fillRect([768,0,12,760])",
  "strokeStyle=#3a3a3a",
  "lineWidth=1",
  "setLineDash([[3,3]])",
  "beginPath([])",
  "moveTo([0.5,0])",
  "lineTo([0.5,760])",
  "moveTo([12.5,0])",
  "lineTo([12.5,760])",
  "moveTo([24.5,0])",
  "lineTo([24.5,760])",
  "moveTo([36.5,0])",
  "lineTo([36.5,760])",
  "moveTo([48.5,0])",
  "lineTo([48.5,760])",
  "moveTo([60.5,0])",
  "lineTo([60.5,760])",
  "moveTo([72.5,0])",
  "lineTo([72.5,760])",
  "moveTo([84.5,0])",
  "lineTo([84.5,760])",
  "moveTo([96.5,0])",
  "lineTo([96.5,760])",
  "moveTo([108.5,0])",
  "lineTo([108.5,760])",
  "moveTo([120.5,0])",
  "lineTo([120.5,760])",
  "moveTo([132.5,0])",
  "lineTo([132.5,760])",
  "moveTo([144.5,0])",
  "lineTo([144.5,760])",
  "moveTo([156.5,0])",
  "lineTo([156.5,760])",
  "moveTo([168.5,0])",
  "lineTo([168.5,760])",
  "moveTo([180.5,0])",
  "lineTo([180.5,760])",
  "moveTo([192.5,0])",
  "lineTo([192.5,760])",
  "moveTo([204.5,0])",
  "lineTo([204.5,760])",
  "moveTo([216.5,0])",
  "lineTo([216.5,760])",
  "moveTo([228.5,0])",
  "lineTo([228.5,760])",
  "moveTo([240.5,0])",
  "lineTo([240.5,760])",
  "moveTo([252.5,0])",
  "lineTo([252.5,760])",
  "moveTo([264.5,0])",
  "lineTo([264.5,760])",
  "moveTo([276.5,0])",
  "lineTo([276.5,760])",
  "moveTo([288.5,0])",
  "lineTo([288.5,760])",
  "moveTo([300.5,0])",
  "lineTo([300.5,760])",
  "moveTo([312.5,0])",
  "lineTo([312.5,760])",
  "moveTo([324.5,0])",
  "lineTo([324.5,760])",
  "moveTo([336.5,0])",
  "lineTo([336.5,760])",
  "moveTo([348.5,0])",
  "lineTo([348.5,760])",
  "moveTo([360.5,0])",
  "lineTo([360.5,760])",
  "moveTo([372.5,0])",
  "lineTo([372.5,760])",
  "moveTo([384.5,0])",
  "lineTo([384.5,760])",
  "moveTo([396.5,0])",
  "lineTo([396.5,760])",
  "moveTo([408.5,0])",
  "lineTo([408.5,760])",
  "moveTo([420.5,0])",
  "lineTo([420.5,760])",
  "moveTo([432.5,0])",
  "lineTo([432.5,760])",
  "moveTo([444.5,0])",
  "lineTo([444.5,760])",
  "moveTo([456.5,0])",
  "lineTo([456.5,760])",
  "moveTo([468.5,0])",
  "lineTo([468.5,760])",
  "moveTo([480.5,0])",
  "lineTo([480.5,760])",
  "moveTo([492.5,0])",
  "lineTo([492.5,760])",
  "moveTo([504.5,0])",
  "lineTo([504.5,760])",
  "moveTo([516.5,0])",
  "lineTo([516.5,760])",
  "moveTo([528.5,0])",
  "lineTo([528.5,760])",
  "moveTo([540.5,0])",
  "lineTo([540.5,760])",
  "moveTo([552.5,0])",
  "lineTo([552.5,760])",
  "moveTo([564.5,0])",
  "lineTo([564.5,760])",
  "moveTo([576.5,0])",
  "lineTo([576.5,760])",
  "moveTo([588.5,0])",
  "lineTo([588.5,760])",
  "moveTo([600.5,0])",
  "lineTo([600.5,760])",
  "moveTo([612.5,0])",
  "lineTo([612.5,760])",
  "moveTo([624.5,0])",
  "lineTo([624.5,760])",
  "moveTo([636.5,0])",
  "lineTo([636.5,760])",
  "moveTo([648.5,0])",
  "lineTo([648.5,760])",
  "moveTo([660.5,0])",
  "lineTo([660.5,760])",
  "moveTo([672.5,0])",
  "lineTo([672.5,760])",
  "moveTo([684.5,0])",
  "lineTo([684.5,760])",
  "moveTo([696.5,0])",
  "lineTo([696.5,760])",
  "moveTo([708.5,0])",
  "lineTo([708.5,760])",
  "moveTo([720.5,0])",
  "lineTo([720.5,760])",
  "moveTo([732.5,0])",
  "lineTo([732.5,760])",
  "moveTo([744.5,0])",
  "lineTo([744.5,760])",
  "moveTo([756.5,0])",
  "lineTo([756.5,760])",
  "moveTo([768.5,0])",
  "lineTo([768.5,760])",
  "moveTo([780.5,0])",
  "lineTo([780.5,760])",
  "moveTo([792.5,0])",
  "lineTo([792.5,760])",
  "moveTo([804.5,0])",
  "lineTo([804.5,760])",
  "stroke([])",
  "strokeStyle=#111111",
  "lineWidth=1",
  "setLineDash([[3,3]])",
  "beginPath([])",
  "moveTo([60.5,0])",
  "lineTo([60.5,760])",
  "moveTo([432.5,0])",
  "lineTo([432.5,760])",
  "moveTo([768.5,0])",
  "lineTo([768.5,760])",
  "stroke([])",
  "strokeStyle=#565656",
  "lineWidth=1",
  "setLineDash([[]])",
  "beginPath([])",
  "moveTo([60.5,0])",
  "lineTo([60.5,760])",
  "stroke([])",
  "setLineDash([[]])",
  "strokeStyle=#9c9c9c",
  "lineWidth=1",
  "beginPath([])",
  "moveTo([0,-19.5])",
  "lineTo([800,-19.5])",
  "moveTo([0,40.5])",
  "lineTo([800,40.5])",
  "moveTo([0,100.5])",
  "lineTo([800,100.5])",
  "moveTo([0,160.5])",
  "lineTo([800,160.5])",
  "moveTo([0,220.5])",
  "lineTo([800,220.5])",
  "moveTo([0,280.5])",
  "lineTo([800,280.5])",
  "moveTo([0,340.5])",
  "lineTo([800,340.5])",
  "moveTo([0,400.5])",
  "lineTo([800,400.5])",
  "moveTo([0,460.5])",
  "lineTo([800,460.5])",
  "moveTo([0,520.5])",
  "lineTo([800,520.5])",
  "moveTo([0,580.5])",
  "lineTo([800,580.5])",
  "moveTo([0,640.5])",
  "lineTo([800,640.5])",
  "moveTo([0,700.5])",
  "lineTo([800,700.5])",
  "moveTo([0,760.5])",
  "lineTo([800,760.5])",
  "stroke([])",
  "lineWidth=1",
  "strokeStyle=#80848b",
  "setLineDash([[]])",
  "beginPath([])",
  "moveTo([120,250])",
  "lineTo([120,550])",
  "stroke([])",
  "fillStyle=#3d2070",
  "beginPath([])",
  "moveTo([120,292.85714285714283])",
  "lineTo([117.5,288.85714285714283])",
  "lineTo([122.5,288.85714285714283])",
  "lineTo([120,292.85714285714283])",
  "moveTo([120,335.7142857142857])",
  "lineTo([117.5,331.7142857142857])",
  "lineTo([122.5,331.7142857142857])",
  "lineTo([120,335.7142857142857])",
  "moveTo([120,378.57142857142856])",
  "lineTo([117.5,374.57142857142856])",
  "lineTo([122.5,374.57142857142856])",
  "lineTo([120,378.57142857142856])",
  "moveTo([120,421.42857142857144])",
  "lineTo([117.5,417.42857142857144])",
  "lineTo([122.5,417.42857142857144])",
  "lineTo([120,421.42857142857144])",
  "moveTo([120,464.2857142857143])",
  "lineTo([117.5,460.2857142857143])",
  "lineTo([122.5,460.2857142857143])",
  "lineTo([120,464.2857142857143])",
  "moveTo([120,507.1428571428571])",
  "lineTo([117.5,503.1428571428571])",
  "lineTo([122.5,503.1428571428571])",
  "lineTo([120,507.1428571428571])",
  "moveTo([120,543])",
  "lineTo([117,535])",
  "lineTo([123,535])",
  "lineTo([120,543])",
  "fill([])",
  "lineWidth=2",
  "strokeStyle=#0af",
  "setLineDash([[]])",
  "beginPath([])",
  "moveTo([120,130])",
  "lineTo([120,160])",
  "lineTo([72,160])",
  "lineTo([72,190])",
  "stroke([])",
  "fillStyle=#0af",
  "beginPath([])",
  "moveTo([110,160])",
  "lineTo([114,157.5])",
  "lineTo([114,162.5])",
  "lineTo([110,160])",
  "moveTo([72,181])",
  "lineTo([69,173])",
  "lineTo([75,173])",
  "lineTo([72,181])",
  "fill([])",
  "lineWidth=3",
  "strokeStyle=#0af",
  "setLineDash([[]])",
  "beginPath([])",
  "moveTo([120,70])",
  "lineTo([120,100])",
  "lineTo([72,100])",
  "lineTo([72,130])",
  "moveTo([120,190])",
  "lineTo([120,220])",
  "lineTo([84,220])",
  "lineTo([84,250])",
  "stroke([])",
  "fillStyle=#0af",
  "beginPath([])",
  "moveTo([110,100])",
  "lineTo([114,97.5])",
  "lineTo([114,102.5])",
  "lineTo([110,100])",
  "moveTo([72,121])",
  "lineTo([69,113])",
  "lineTo([75,113])",
  "lineTo([72,121])",
  "moveTo([110,220])",
  "lineTo([114,217.5])",
  "lineTo([114,222.5])",
  "lineTo([110,220])",
  "moveTo([84,250])",
  "lineTo([81,242])",
  "lineTo([87,242])",
  "lineTo([84,250])",
  "fill([])",
  "lineWidth=1",
  "strokeStyle=#333",
  "strokeStyle=#333",
  "lineWidth=1",
  "setLineDash([[2,2]])",
  "strokeRect([84.5,127.5,59,5])",
  "setLineDash([[]])",
  "globalAlpha=0.18",
  "fillStyle=#44f",
  "fillRect([72,67,48,6])",
  "globalAlpha=1",
  "globalAlpha=1",
  "fillStyle=#f00",
  "fillRect([72,127,48,6])",
  "globalAlpha=1",
  "globalAlpha=1",
  "fillStyle=#0c8",
  "fillRect([72,187,48,6])",
  "globalAlpha=1",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,247,48,6])",
  "fillStyle=#fff",
  "fillRect([72,247,21.6,6])",
  "fillRect([93.1,245,1,10])",
  "globalAlpha=1",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,307,48,6])",
  "globalAlpha=1",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,367,48,6])",
  "globalAlpha=1",
  "globalAlpha=0.3",
  "fillStyle=#44f",
  "fillRect([72,427,48,6])",
  "globalAlpha=1",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,487,48,6])",
  "globalAlpha=1",
  "globalAlpha=1",
  "fillStyle=#44f",
  "beginPath([])",
  "moveTo([113,545.1])",
  "lineTo([127,545.1])",
  "lineTo([120,557])",
  "lineTo([113,545.1])",
  "fill([])",
  "globalAlpha=1",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,608.5,48,3])",
  "fillRect([72,606,2,8])",
  "fillRect([118,606,2,8])",
  "globalAlpha=1",
  "globalAlpha=1",
  "fillStyle=#44f",
  "fillRect([72,668.5,48,3])",
  "fillRect([72,671.5,3,1])",
  "fillRect([117,671.5,3,1])",
  "globalAlpha=1",
  "globalAlpha=1",
  "fillStyle=#14161c",
  "strokeStyle=#44f",
  "lineWidth=1",
  "fillRect([64.5,62.5,15,15])",
  "strokeRect([64.5,62.5,15,15])",
  "fillRect([112.5,62.5,15,15])",
  "strokeRect([112.5,62.5,15,15])",
  "fillRect([64.5,242.5,15,15])",
  "strokeRect([64.5,242.5,15,15])",
  "fillRect([112.5,242.5,15,15])",
  "strokeRect([112.5,242.5,15,15])",
  "fillRect([64.5,302.5,15,15])",
  "strokeRect([64.5,302.5,15,15])",
  "fillRect([112.5,302.5,15,15])",
  "strokeRect([112.5,302.5,15,15])",
  "fillRect([64.5,362.5,15,15])",
  "strokeRect([64.5,362.5,15,15])",
  "fillRect([112.5,362.5,15,15])",
  "strokeRect([112.5,362.5,15,15])",
  "fillRect([64.5,422.5,15,15])",
  "strokeRect([64.5,422.5,15,15])",
  "fillRect([112.5,422.5,15,15])",
  "strokeRect([112.5,422.5,15,15])",
  "fillRect([64.5,482.5,15,15])",
  "strokeRect([64.5,482.5,15,15])",
  "fillRect([112.5,482.5,15,15])",
  "strokeRect([112.5,482.5,15,15])",
  "strokeStyle=#f00",
  "lineWidth=3",
  "fillRect([64.5,122.5,15,15])",
  "strokeRect([64.5,122.5,15,15])",
  "fillRect([112.5,122.5,15,15])",
  "strokeRect([112.5,122.5,15,15])",
  "strokeStyle=#0c8",
  "lineWidth=2",
  "fillRect([64.5,182.5,15,15])",
  "strokeRect([64.5,182.5,15,15])",
  "fillRect([112.5,182.5,15,15])",
  "strokeRect([112.5,182.5,15,15])",
  "fillStyle=#0c8",
  "fillRect([70,188,4,4])",
  "fillRect([118,188,4,4])",
  "fillStyle=#333",
  "beginPath([])",
  "moveTo([68.5,295])",
  "lineTo([75.5,295])",
  "lineTo([72,300])",
  "fill([])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "beginPath([])",
  "moveTo([68.5,295])",
  "lineTo([75.5,295])",
  "lineTo([72,300])",
  "lineTo([68.5,295])",
  "stroke([])",
  "fillStyle=#fa0",
  "beginPath([])",
  "moveTo([82,373.5])",
  "lineTo([88,373.5])",
  "lineTo([85,366.5])",
  "fill([])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "beginPath([])",
  "moveTo([82,373.5])",
  "lineTo([88,373.5])",
  "lineTo([85,366.5])",
  "lineTo([82,373.5])",
  "stroke([])",
  "fillStyle=#fa0",
  "fillRect([95,421,5,5])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "strokeRect([95.5,421.5,4,4])",
  "fillStyle=#fa0",
  "fillRect([93,419,5,5])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "strokeRect([93.5,419.5,4,4])",
  "fillStyle=#fa0",
  "fillRect([102,482,2,3])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "strokeRect([102.5,482.5,1,2])",
  "fillStyle=#fa0",
  "fillRect([105,480,2,5])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "strokeRect([105.5,480.5,1,4])",
  "fillStyle=#fa0",
  "fillRect([108,478,2,7])",
  "strokeStyle=#fff",
  "lineWidth=1",
  "strokeRect([108.5,478.5,1,6])",
  "strokeStyle=#333",
  "lineWidth=1",
  "setLineDash([[2,2]])",
  "beginPath([])",
  "moveTo([72,130])",
  "lineTo([120,130])",
  "moveTo([120,250])",
  "lineTo([84,250])",
  "stroke([])",
  "setLineDash([[]])",
  "fillStyle=#3d2070",
  "fillRect([82,248,4,4])",
  "fillStyle=#fff",
  "fillRect([80.5,246.5,7,7])",
  "strokeStyle=#0b0b0b",
  "lineWidth=1.5",
  "strokeRect([80.5,246.5,7,7])",
  "lineWidth=1",
  "fillStyle=#fff",
  "fillRect([115,125,10,10])",
  "strokeStyle=#0b0b0b",
  "lineWidth=2",
  "strokeRect([115,125,10,10])",
  "lineWidth=1",
  "strokeStyle=#dd1",
  "lineWidth=2",
  "setLineDash([[]])",
  "beginPath([])",
  "moveTo([60.5,0])",
  "lineTo([60.5,760])",
  "stroke([])",
  "strokeStyle=#f00",
  "lineWidth=1.5",
  "setLineDash([[4,3]])",
  "beginPath([])",
  "moveTo([113.5,0])",
  "lineTo([113.5,760])",
  "stroke([])",
  "setLineDash([[]])",
  "font=11px 'IBM Plex Sans', ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif",
  "textBaseline=middle",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A100 Excavate",96,58])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A110 Piling",96,118])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A120 Steel",96,178])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A130 Cladding",96,238])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A140 Fit-out",96,298])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A150 M&E",96,358])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A160 Roof",96,418])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["A170 Crane",96,478])",
  "textAlign=left",
  "font=600 11px 'IBM Plex Sans', ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["M1 Handover",120,538])",
  "textAlign=left",
  "font=11px 'IBM Plex Sans', ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["LOE Supervision",96,598])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["Substructure",96,658])",
  "textAlign=left",
  "font=11px 'IBM Plex Sans', ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif",
  "textBaseline=middle",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",128.48331477354787,82])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",128.48331477354787,142])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",128.48331477354787,202])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",128.48331477354787,262])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",128.48331477354787,322])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",128.48331477354787,382])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",128.48331477354787,442])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",128.48331477354787,502])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["6 Jan",120,562])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",124,622])",
  "textAlign=left",
  "fillStyle=#eee",
  "textAlign=left",
  "fillText(["5 Jan",124,682])",
  "textAlign=left",
  "textAlign=left",
  "font=11px 'IBM Plex Sans', ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif",
  "textBaseline=middle",
  "fillStyle=#eee",
  "textAlign=center",
  "fillText(["2d",96,82])",
  "fillText(["2d",96,142])",
  "fillText(["2d",96,202])",
  "fillText(["2d",96,262])",
  "fillText(["2d",96,322])",
  "fillText(["2d",96,382])",
  "fillText(["2d",96,442])",
  "fillText(["2d",96,502])",
  "fillText(["2d",96,622])",
  "textAlign=left",
  "font=11px 'IBM Plex Sans', ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif",
  "textBaseline=middle",
  "textAlign=center",
  "lineWidth=1",
  "strokeStyle=#0af",
  "fillStyle=#14161c",
  "fillRect([84,153.5,24,13])",
  "strokeRect([84.5,154,23,12])",
  "fillStyle=#eee",
  "fillText(["+2d",96,160])",
  "strokeStyle=#0af",
  "fillStyle=#14161c",
  "fillRect([90,213.5,24,13])",
  "strokeRect([90.5,214,23,12])",
  "fillStyle=#eee",
  "fillText(["−1d",102,220])",
  "textAlign=left",
  "lineWidth=1",
  "strokeStyle=#0af",
  "lineWidth=2",
  "strokeRect([70,125,52,10])",
  "fillStyle=#0af",
  "fillRect([69,127,6,6])",
  "fillRect([117,127,6,6])",
]
`;

exports[`paintScene — whole-scene golden (ADR-0078 S1) > holds its per-method call totals 1`] = `
{
  "beginPath": 18,
  "clearRect": 1,
  "fill": 6,
  "fillRect": 67,
  "fillText": 33,
  "lineTo": 152,
  "moveTo": 112,
  "setLineDash": 14,
  "setTransform": 1,
  "stroke": 12,
  "strokeRect": 27,
}
`;
